[gd_scene load_steps=7 format=2]

[ext_resource path="res://client/host_join_lobby/HostJoinLobbyState.gd" type="Script" id=1]
[ext_resource path="res://common/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/MenuPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/TextInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/LoadingLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://common/Camera2D.tscn" type="PackedScene" id=7]

[node name="HostJoinGameState" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuBackground" parent="UICanvasLayer" instance=ExtResource( 2 )]

[node name="MenuPanel" parent="UICanvasLayer" instance=ExtResource( 3 )]

[node name="PlayerNameTextInput" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 140.0
margin_right = -320.0
margin_bottom = -410.0

[node name="GameNameTextInput" parent="UICanvasLayer/MenuPanel" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 240.0
margin_right = -320.0
margin_bottom = -310.0

[node name="StartButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 370.0
margin_right = -200.0
margin_bottom = -160.0
rect_scale = Vector2( 2, 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UICanvasLayer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 460.0
margin_right = -198.0
margin_bottom = -70.0
rect_scale = Vector2( 2, 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingIndicator" parent="UICanvasLayer" instance=ExtResource( 6 )]
